Refactoring complet : Navbar optimisée, Hero fix, Favicon et Lazy Loading

--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    
+    <link rel="icon" type="image/svg+xml" href="/oda-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>oda_app</title>
+    
+    <title>ODA - Agence de Design & Stratégie Digitale | Lomé, Togo</title>
+    <meta name="description" content="Olm Design Agency (ODA) transforme votre communication digitale. Création de sites web, branding, graphisme et marketing digital à Lomé." />
+    <meta name="theme-color" content="#0056B3">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;800&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
